# micro_llm

./: Dockerfile.indexing  Dockerfile.inference  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yaml
src/micro_llm/: __init__.py
src/micro_llm/conf/: config.yaml
src/micro_llm/conf/indexing/: indexing.yaml
src/micro_llm/conf/inference/: inference.yaml
src/micro_llm/entrypoints/: indexing_endpoint.py  inference_endpoint.py
src/micro_llm/pipelines/: indexing.py  inference.py
src/micro_llm/scripts/: chunker.py  embed.py  generator.py  load.py  retrieve.py  utils.py  vectordb.py
